--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,5 +51,14 @@
         <item name="android:scaleType">centerCrop</item>
     </style>
 
+    <style name="CustomRadioButton">
+        <item name="android:button">@null</item>
+        <item name="android:background">@drawable/radio_button_selector</item>
+        <item name="android:paddingHorizontal">20dp</item>
+        <item name="android:paddingVertical">8dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:gravity">center</item>
+    </style>
+
 
 </resources>
