--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -67,4 +67,9 @@
     <color name="status_cancelled">#DC2626</color>
     <color name="gray_disabled">#CBD5E1</color>
 
+    <color name="primary_cyan">#00BCD4</color>
+    <color name="accent_coral">#FF6B6B</color>
+    <color name="divider_light">#E8E8E8</color>
+    <color name="bg_light">#F5F7FA</color>
+
 </resources>
