--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".activity.ChangePasswordActivity">
+    tools:context=".activity.authen.ChangePasswordActivity">
 
     <!-- 🔙 Header -->
     <LinearLayout
