--- a/app/src/main/res/layout/activity_guide_personal_info.xml
+++ b/app/src/main/res/layout/activity_guide_personal_info.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:background="@color/white"
-    tools:context=".activity.PersonalInfoActivity">
+    tools:context=".activity.authen.EditProfileActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
