--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/badge_guide"
+    android:background="@drawable/card_gradient"
     android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -85,7 +85,7 @@
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
                     android:fontFamily="sans-serif-medium"
-                    android:hint="Email hoặc tên đăng nhập"
+                    android:hint="Email"
                     android:inputType="textEmailAddress"
                     android:padding="12dp"
                     android:textColor="#1F2937"
