--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -57,7 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="24dp"
-            android:src="@drawable/ic_feedback"
+            android:src="@drawable/ic_homepage"
             app:tint="@android:color/white"
             app:backgroundTint="#10B981"
             app:elevation="6dp"
