--- a/app/src/main/res/drawable/btn_back.xml
+++ b/app/src/main/res/drawable/btn_back.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#F5F7FA" />
+    <solid android:color="#111111" />
     <corners android:radius="8dp" />
 </shape>
